add get version to api
